# Notes_app_Near

test101/: Cargo.toml  Readme.md  build.sh  redeploy.sh  res
test101/src/: lib.rs
