[package]
name = "test101"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"

[profile.release]
codegen-units = 1
opt-level = "z"         # Optimize for small code size
lto = true              # Optimize for small code size
debug = false           # Do not include debug info
panic = "abort"         # Terminate process on panic
overflow-checks = true  # Panic on overflow